--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </div>
   <h1><u>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</u></h1>
 
-  <label style="text-align: center"><button type="button" onclick="obterNumeroGlobal()">
-   NÚMERO ➡️ </button> <input type="text" name="numero" style="width: 70px;"> ANO ➡️ <input type="text" name="ano" style="width: 50px;"></label>
+  <label style="text-align: center">
+   NÚMERO: <input type="text" name="numero" style="width: 70px;" readonly> ANO: <input type="text" name="ano" style="width: 50px;"></label>
   <div class="linha-horizontal">
     <label>Data: <input type="date" name="data"></label>
     <label>Hora Início: <input type="time" name="hora_inicio"></label>
@@ -95,6 +95,7 @@
   <label>- Autos de infração lavrados: <input type="text" name="autos"></label>
   <label>- Número de pessoas atendidas: <input type="text" name="pessoas_atendidas"></label>
   <label>- Veículos recolhidos: <input type="text" name="veiculos"></label>
+
   <div class="equipe">
     <label style="text-align: center; color: blue; background-color: #FFFFFF; width: 100px;"> EQUIPE 👮</label>
     <div class="linha-horizontal-2">
@@ -111,6 +112,7 @@
     <label>Assinaturas (Agentes 1, 2, 3 e 4):</label>
     <canvas id="assinatura" width="690" height="170"></canvas><br>
   </div>
+
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SMDSM, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
@@ -119,12 +121,11 @@
     </div>
   </div>
 </div>
-
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
-  
-<div style="background-color: #dbead5; margin-top: 2px; padding: 1px 10px 6px 10px; border-radius: 4px; margin-bottom: 8px">
+
+<div style="background-color: #dbead5; margin-top: 2px; padding: 0.5px 10px 6px 10px; border-radius: 4px; margin-bottom: 8px">
 <label style="font-size: 17px; margin-bottom: 1px">📸 Fotos da Ocorrência:</label>
 <input 
   type="file" 
@@ -142,189 +143,119 @@
 </div>
 <div style="text-align:center; margin-top:10px; margin-bottom: 5px; background-color: yellow; padding: 8px 12px;">
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
+</div>
+
+
 <script>
+/* ================= ASSINATURA ================= */
 const canvas = document.getElementById('assinatura');
 const ctx = canvas.getContext('2d');
 let desenhando = false;
 
-function getPos(event) {
-  if (event.touches) {
-    const rect = canvas.getBoundingClientRect();
-    return { x: event.touches[0].clientX - rect.left, y: event.touches[0].clientY - rect.top };
-  } else {
-    return { x: event.offsetX, y: event.offsetY };
-  }
+function pos(e) {
+  const r = canvas.getBoundingClientRect();
+  const p = e.touches ? e.touches[0] : e;
+  return { x: p.clientX - r.left, y: p.clientY - r.top };
 }
-function iniciarDesenho(e) {
+
+canvas.addEventListener('mousedown', e => {
   desenhando = true;
-  const pos = getPos(e);
+  const p = pos(e);
   ctx.beginPath();
-  ctx.moveTo(pos.x, pos.y);
-}
-function desenhar(e) {
+  ctx.moveTo(p.x, p.y);
+});
+
+canvas.addEventListener('mousemove', e => {
   if (!desenhando) return;
-  e.preventDefault();
-  const pos = getPos(e);
-  ctx.lineTo(pos.x, pos.y);
+  const p = pos(e);
+  ctx.lineTo(p.x, p.y);
   ctx.stroke();
-}
-function pararDesenho() { desenhando = false; }
+});
 
-canvas.addEventListener('mousedown', iniciarDesenho);
-canvas.addEventListener('mousemove', desenhar);
-canvas.addEventListener('mouseup', pararDesenho);
-canvas.addEventListener('mouseleave', pararDesenho);
-canvas.addEventListener('touchstart', iniciarDesenho);
-canvas.addEventListener('touchmove', desenhar);
-canvas.addEventListener('touchend', pararDesenho);
+canvas.addEventListener('mouseup', () => desenhando = false);
+canvas.addEventListener('mouseleave', () => desenhando = false);
 
-function limparAssinatura() { ctx.clearRect(0, 0, canvas.width, canvas.height); }
+canvas.addEventListener('touchstart', e => {
+  desenhando = true;
+  const p = pos(e);
+  ctx.beginPath();
+  ctx.moveTo(p.x, p.y);
+});
 
-function prepararAssinatura(clone) {
-  const canvasOriginal = document.getElementById('assinatura');
-  const assinaturaClone = clone.querySelector('#assinatura');
-  if (canvasOriginal && assinaturaClone) {
-    const imgData = canvasOriginal.toDataURL();
-    const img = document.createElement('img');
-    img.src = imgData;
-    img.style.border = '1px solid #000';
-    img.width = canvasOriginal.width;
-    img.height = canvasOriginal.height;
-    assinaturaClone.parentNode.replaceChild(img, assinaturaClone);
-  }
-}
+canvas.addEventListener('touchmove', e => {
+  e.preventDefault();
+  if (!desenhando) return;
+  const p = pos(e);
+  ctx.lineTo(p.x, p.y);
+  ctx.stroke();
+});
 
-function getNumeroRelatorio() {
-  const numero = document.querySelector('input[name="numero"]').value.trim();
-  const agora = new Date();
-  const data = agora.toLocaleDateString('pt-BR').split('/').reverse().join('-');
-  const hora = agora.toTimeString().split(' ')[0].replace(/:/g, '-');
-  if (numero) {
-  return `relatorio_${numero}_${data}_${hora}.pdf`;
-  } else {
-  return `relatorio_${data}_${hora}.pdf`; // nome padrão caso esteja vazio
-  }
+canvas.addEventListener('touchend', () => desenhando = false);
 
+function limparAssinatura() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
-function gerarPDF() {
-  const original = document.getElementById('pdf-content');
-  const clone = original.cloneNode(true);
-  const textareas = clone.querySelectorAll('textarea');
-  textareas.forEach(textarea => {
-    const div = document.createElement('div');
-    div.style.whiteSpace = 'pre-wrap';
-    div.style.border = '1px solid #ccc';
-    div.style.padding = '5px';
-    div.style.minHeight = '80px';
-    div.style.fontWeight = 'bold';
-    div.style.fontSize = '14px';
-    div.style.backgroundColor = 'white';
-    div.style.color = 'blue';
-    div.textContent = textarea.value;
-    textarea.parentNode.replaceChild(div, textarea);
-  });
-  prepararAssinatura(clone);
-  const container = document.createElement('div');
-  container.style.position = 'absolute';
-  container.style.left = '-9999px';
-  container.appendChild(clone);
-  document.body.appendChild(container);
-  
-  const opt = {
-    margin: [5, 5, 5, 5],
-    filename: getNumeroRelatorio(),
-    image: { type: 'jpeg', quality: 0.98 },
-    html2canvas: { 
-      scale: 3,
-      useCORS: true,
-      scrollY: 0,
-      windowWidth: document.documentElement.scrollWidth,
-      windowHeight: document.documentElement.scrollHeight
-    },
-pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },    
-    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-  };
-  html2pdf().set(opt).from(clone).save().then(() => {
-    document.body.removeChild(container);
-  });
+/* ================= NÚMERO GLOBAL ================= */
+async function garantirNumeroGlobal() {
+  const n = document.querySelector('[name="numero"]');
+  const a = document.querySelector('[name="ano"]');
+  if (n.value) return;
+
+  const r = await fetch(
+    'https://script.google.com/macros/s/AKfycbzX6YyTI70dNpfQh9XBcXhYpEGfud6uYh29e3vFuhtqqjYae6VseboqHrLCsqS-R_02/exec'
+  );
+  if (!r.ok) throw new Error();
+  const d = await r.json();
+  n.value = d.numero;
+  a.value = d.ano;
+}
+
+/* ================= PDF ================= */
+function nomePDF() {
+  const n = document.querySelector('[name="numero"]').value;
+  const d = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
+  return `relatorio_${n}_${d}.pdf`;
+}
+
+async function gerarPDF() {
+  try { await garantirNumeroGlobal(); }
+  catch { alert('Erro ao gerar número'); return; }
+
+  html2pdf().from(document.getElementById('pdf-content')).save(nomePDF());
 }
 
 async function compartilharPDF() {
-  const original = document.getElementById('pdf-content');
-  const clone = original.cloneNode(true);
+  try { await garantirNumeroGlobal(); }
+  catch { alert('Erro ao gerar número'); return; }
 
-  const textareas = clone.querySelectorAll('textarea');
-  textareas.forEach(textarea => {
-    const div = document.createElement('div');
-    div.style.whiteSpace = 'pre-wrap';
-    div.style.border = '1px solid #ccc';
-    div.style.padding = '5px';
-    div.style.minHeight = '80px';
-    div.style.fontWeight = 'bold';
-    div.style.fontSize = '14px';
-    div.style.backgroundColor = 'white';
-    div.style.color = 'blue';
-    div.textContent = textarea.value;
-    textarea.parentNode.replaceChild(div, textarea);
-  });
+  const blob = await html2pdf()
+    .from(document.getElementById('pdf-content'))
+    .outputPdf('blob');
 
-  prepararAssinatura(clone);
+  const file = new File([blob], nomePDF(), { type:'application/pdf' });
 
-  const container = document.createElement('div');
-  container.style.position = 'absolute';
-  container.style.left = '-9999px';
-  container.appendChild(clone);
-  document.body.appendChild(container);
-
-  const opt = {
-    margin: [5, 5, 5, 5],
-    filename: getNumeroRelatorio(),
-    image: { type: 'jpeg', quality: 0.98 },
-    html2canvas: { 
-      scale: 3,
-      useCORS: true,
-      scrollY: 0,
-      windowWidth: document.documentElement.scrollWidth,
-      windowHeight: document.documentElement.scrollHeight
-    },
-    pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
-    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-  };
-
-  const blob = await html2pdf().set(opt).from(clone).outputPdf('blob');
-
-  const file = new File([blob], getNumeroRelatorio(), { type: 'application/pdf' });
-
-  if (navigator.canShare && navigator.canShare({ files: [file] })) {
-    try {
-      await navigator.share({
-        title: 'Relatório de Ocorrência',
-        text: 'Confira o relatório preenchido.',
-        files: [file]
-      });
-    } catch (err) {
-      alert('Compartilhamento cancelado ou falhou.');
-    }
+  if (navigator.canShare?.({ files:[file] })) {
+    await navigator.share({ files:[file], title:'Relatório' });
   } else {
-    alert('Compartilhamento de arquivos não suportado neste navegador.');
+    alert('Compartilhamento não suportado');
   }
-
-  document.body.removeChild(container);
 }
 
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('sw.js')
-    .then(() => console.log('Service Worker registrado com sucesso'))
-    .catch(error => console.log('Erro ao registrar o Service Worker:', error));
-}
-
-// 🔹 Preenchimento automático do endereço via GPS (OpenStreetMap)
-  self.addEventListener('fetch', (event) => {
-  if (event.request.url.includes('nominatim.openstreetmap.org')) {
-    event.respondWith(fetch(event.request));
-  }
+/* ================= DATA / ANO / GPS ================= */
+document.addEventListener('DOMContentLoaded', () => {
+  const hoje = new Date();
+  document.querySelector('[name="ano"]').value = hoje.getFullYear();
+  document.querySelector('[name="data"]').value = hoje.toISOString().slice(0,10);
+  preencherEndereco();
 });
+
+
+
+/* ================= SERVICE WORKER ================= */
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
 
 function preencherEndereco() {
   if (!('geolocation' in navigator)) {
@@ -386,64 +317,6 @@ window.addEventListener('load', () => {
   }, 800);
 });
 
-document.addEventListener('DOMContentLoaded', () => {
-  const agora = new Date();
-
-  // ANO
-  const campoAno = document.querySelector('input[name="ano"]');
-  if (campoAno && !campoAno.value) {
-    campoAno.value = agora.getFullYear();
-  }
-  
-  // DATA
-  const campoData = document.querySelector('input[name="data"]');
-  if (campoData && !campoData.value) {
-    const yyyy = agora.getFullYear();
-    const mm = String(agora.getMonth() + 1).padStart(2, '0');
-    const dd = String(agora.getDate()).padStart(2, '0');
-    campoData.value = `${yyyy}-${mm}-${dd}`;
-  }
-
-  
-
-  // ENDEREÇO (GPS)
-  const campoLocal = document.getElementById('local');
-  if (campoLocal && !campoLocal.value) {
-    try { preencherEndereco(); } catch (e) {}
-  }
-});
-
-async function obterNumeroGlobal() {
-  const btn = event?.target;
-  const inputNumero = document.querySelector('input[name="numero"]');
-  const inputAno = document.querySelector('input[name="ano"]');
-
-  // Evita gerar duas vezes
-  if (inputNumero.value) {
-    alert('Número já foi gerado.');
-    return;
-  }
-
-  if (btn) btn.disabled = true;
-
-  try {
-    const response = await fetch(
-      'https://script.google.com/macros/s/AKfycbzX6YyTI70dNpfQh9XBcXhYpEGfud6uYh29e3vFuhtqqjYae6VseboqHrLCsqS-R_02/exec'
-    );
-
-    const data = await response.json();
-
-    inputNumero.value = data.numero;
-    inputAno.value = data.ano;
-
-  } catch (err) {
-    alert('Sem conexão. Número não sincronizado.');
-    console.error(err);
-  } finally {
-    if (btn) btn.disabled = false;
-  }
-}
-
 async function compartilharFotos() {
   const input = document.getElementById('fotosOcorrencia');
   const inputNumero = document.querySelector('input[name="numero"]');
@@ -481,7 +354,8 @@ async function compartilharFotos() {
   } else {
     alert('Este navegador não suporta compartilhamento de arquivos.');
   }
-}</script>
+}
+</script>
 </body>
 </html>
 
