--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
      .digital { margin-top: 7px; padding: 10px 15px; font-weight: bold; font-size: 18px;
       background-color: green; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%; }
+    /* 🔹 Ajustes para fotos */
+    #fotos-container {
+      margin-top: 10px;
+    }
+    .foto-box {
+      margin-bottom: 10px;
+      page-break-inside: avoid; /* evita cortar foto no meio */
+      break-inside: avoid;
+      text-align: center;
+    }
+    .foto-box img {
+      max-width: 100%;
+      max-height: 200px; /* garante que caiba em uma página A4 */
+      object-fit: contain;
+      border: 1px solid #000;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
@@ -121,10 +138,18 @@
       <label style="position: absolute; right: 0;">© 2025 Leonildo.Neumann</label>
     </div>
   </div>
+  <!-- 🔹 Seção para fotos -->
+  
+  <input type="file" id="fotoInput" accept="image/*" multiple style="display:none">
+  <div id="fotos-container">
+    <label>Fotos do Local:</label><br>
+  </div>
 </div>
 
 
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
+<button class="btn" onclick="document.getElementById('fotoInput').click()">Incluir Foto</button>
+
 <button type="button" onclick="obterNumeroGlobal()">Finalizar Relatório</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
@@ -501,6 +526,25 @@ async function garantirNumeroRelatorio() {
     return false;
   }
 }
+  /* 🔹 Script para fotos (até 3) */
+const fotoInput = document.getElementById('fotoInput');
+const fotosContainer = document.getElementById('fotos-container');
+
+fotoInput.addEventListener('change', (event) => {
+  fotosContainer.innerHTML = '<label>Fotos do Local:</label><br>'; // limpa antes
+  const files = Array.from(event.target.files);
+
+  files.slice(0,3).forEach((file, index) => { // até 3 fotos
+    const reader = new FileReader();
+    reader.onload = (e) => {
+      const div = document.createElement('div');
+      div.classList.add('foto-box');
+      div.innerHTML = `<p>Foto ${index + 1}</p><img src="${e.target.result}">`;
+      fotosContainer.appendChild(div);
+    };
+    reader.readAsDataURL(file);
+  });
+});
 async function compartilharFotos() {
   const input = document.getElementById('fotosOcorrencia');
   const inputNumero = document.querySelector('input[name="numero"]');
@@ -541,6 +585,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
