--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       height: auto; min-height: 180px; color: blue; font-family: Arial, sans-serif; font-size: 14px;
     }
     .btn {
-      margin-top: 10px; padding: 10px 15px; font-weight: bold; font-size: 18px;
+      margin-top: 8px; padding: 10px 15px; font-weight: bold; font-size: 18px;
       background-color: #D6FFFF; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%;
     }
@@ -147,7 +147,7 @@
 </div>
 
 
-<button class="btn" onclick="limparAssinatura()" style="background-color: white">Limpar Assinatura</button>
+<button class="btn" onclick="limparAssinatura()" style="background-color: white; margin-top: 2px">Limpar Assinatura</button>
 <button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white">📷 Incluir Foto no Relatório</button>
 
 <button type="button" onclick="obterNumeroGlobal()">✅ Finalizar Relatório</button>
@@ -585,6 +585,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
