--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
 </div>
 
 
-<button class="btn" onclick="limparAssinatura()" style="background-color: white; margin-top: 2px">Limpar Assinatura</button>
+<button class="btn" onclick="limparAssinatura()" style="background-color: white">Limpar Assinatura</button>
 <button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white">📷 Incluir Foto no Relatório</button>
-
 <button type="button" onclick="obterNumeroGlobal()">✅ Finalizar Relatório</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
@@ -585,6 +584,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
