--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <label>- Veículos recolhidos: <input type="text" name="veiculos"></label>
 
   <div class="equipe">
-    <label>4 - EQUIPE:</label>
+    <label style="background-color: white; width: 100px; text-align: center">👮 EQUIPE:</label>
     <div class="linha-horizontal-2">
       <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
       <label>Nome Agente 2: <input type="text" name="assinatura2"></label>
@@ -580,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
