--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <label>- Veículos recolhidos: <input type="text" name="veiculos"></label>
 
   <div class="equipe">
-    <label style="background-color: white; width: 100px; text-align: center">👮 EQUIPE:</label>
+    <label style="background-color: white; width: 105px; text-align: center">👮 EQUIPE:</label>
     <div class="linha-horizontal-2">
       <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
       <label>Nome Agente 2: <input type="text" name="assinatura2"></label>
@@ -148,8 +148,8 @@
 
 
 <div style="padding: 6px 10px; margin-top: 1px; background-color: #D6FFFF; border-radius: 4px">
-<button class="btn" onclick="limparAssinatura()" style="background-color: white; color: #15400e; margin-top: 5px">Limpar Assinatura</button>
-<button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white; color: #15400e; margin-top: 2px">📸 Incluir Foto no Relatório</button>
+<button class="btn" onclick="limparAssinatura()" style="background-color: white; color: #15400e; margin-top: 5px">Limpar Assinaturas</button>
+<button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white; color: #15400e; margin-top: 2px">📸 Incluir Fotos no Relatório</button>
 </div>
 <button type="button" onclick="obterNumeroGlobal(); this.style.backgroundColor='#D6FFFF'; this.style.color='white';" style="border: 3px solid #15400e">✅ Finalizar Relatório</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
@@ -580,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
