--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ async function obterNumeroGlobal() {
   try {
     const response = await fetch(
       'https://script.google.com/macros/s/AKfycbykx6FemWHxHDE7xI1ZmRJzLRVqiHHdJcJywiXVq8osJofc5WMkLgJmS_e335u9RMhK/exec'
-    );
+    ); // neumandeveloper@gmail.com
 
     const data = await response.json();
 
@@ -580,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
