--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <label>LOCAL DA OCORRÊNCIA:
  <input type="text" name="local" id="local" placeholder="Ative a localização para preencher automaticamente"> 
 </label>
-  <label>SITUAÇÃO INFORMADA: <textarea name="situacao"></textarea></label>
+  <label>SITUAÇÃO INFORMADA: <textarea name="situacao" style="min-height: 90px"></textarea></label>
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
   <label>- Autos de infração lavrados: <input type="text" name="autos"></label>
   <label>- Número de pessoas atendidas: <input type="text" name="pessoas_atendidas"></label>
@@ -580,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
