--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
     .logo { width: 120px; max-width: 30%; height: auto; }
     .linha-horizontal, .linha-horizontal-2, .linha-horizontal-3 {
-      display: flex; gap: 10px; flex-wrap: wrap; margin-top: 3px;
+      display: flex; gap: 10px; flex-wrap: wrap; margin-top: 1px;
     }
     .linha-horizontal label, .linha-horizontal-2 label, .linha-horizontal-3 label {
       flex: 1; min-width: 180px;
@@ -95,7 +95,7 @@
   <h1>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</h1>
 
   <label style="text-align: center">
-  NÚMERO: <input type="text" name="numero" style="width: 70px;" readonly> ANO: <input type="text" name="ano" style="width: 50px;"></label>
+  NÚMERO: <input type="text" name="numero" style="width: 70px;" readonly> ANO: <input type="text" name="ano" style="width: 52px;"></label>
   <div class="linha-horizontal">
     <label>Data: <input type="date" name="data"></label>
     <label>Hora Início: <input type="time" name="hora_inicio"></label>
@@ -115,7 +115,7 @@
   <label>- Veículos recolhidos: <input type="text" name="veiculos"></label>
 
   <div class="equipe">
-    <label style="background-color: white; width: 105px; text-align: center">👮 EQUIPE:</label>
+    <label style="background-color: white; width: 105px; text-align: center; margin-top: 1px">👮 EQUIPE:</label>
     <div class="linha-horizontal-2">
       <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
       <label>Nome Agente 2: <input type="text" name="assinatura2"></label>
@@ -580,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
